packages/typ/tests/fixtures/diagnostics/0251_fun_monomorphic_int_bool_use_02.ml.expected
File "0251_fun_monomorphic_int_bool_use_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0251_fun_monomorphic_int_bool_use_02 is not a valid module name.

File "0251_fun_monomorphic_int_bool_use_02.ml", line 1, characters 25-29:
1 | let use_beta f = (f 1, f true)
                             ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
